// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DnTable Tests should render correctly with custom props 1`] = `
<div
  class="table-container table-container__freeze"
>
  <table
    class="table is-striped is-cards"
  >
    <thead>
      <tr>
        <th
          class="is-right"
        >
          Date
        </th>
        <th
          class="is-default is-mono"
        >
          Time
        </th>
        <th
          class="is-default is-sorted is-sorted__ascend"
        >
          User
        </th>
        <th
          class="is-default"
        >
          Role
        </th>
        <th
          class="is-default"
        >
          Cause
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          class="is-default"
        >
          04/14/2017
        </th>
        <td
          class="is-default"
        >
          19:34 PDT
        </td>
        <td
          class="is-default"
        >
          yby.jupiter
        </td>
        <td
          class="is-default"
        >
          Admin
        </td>
        <td
          class="is-default"
        >
          jira123
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          class="is-default"
        >
          04/14/2017
        </th>
        <td
          class="is-default"
        >
          19:34 PDT
        </td>
        <td
          class="is-default"
        >
          yby.jupiter
        </td>
        <td
          class="is-default"
        >
          Admin
        </td>
        <td
          class="is-default"
        >
          jira123
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          class="is-default"
        >
          04/14/2017
        </th>
        <td
          class="is-default"
        >
          19:34 PDT
        </td>
        <td
          class="is-default"
        >
          yby.jupiter
        </td>
        <td
          class="is-default"
        >
          Admin
        </td>
        <td
          class="is-default"
        >
          jira123
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th
          class="is-default"
        >
          <a
            href="#footer"
          >
            Footer
          </a>
        </th>
        <td
          class="is-default"
        >
          <a
            href="#greylist"
          >
            pes.acl.greylist
          </a>
        </td>
        <td
          class="is-default"
        >
          Foo Turansky
        </td>
        <td
          class="is-default"
        >
          Admin
        </td>
        <td
          class="is-default"
        >
          jira123
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`DnTable Tests should render with default props 1`] = `
<table
  class="table"
>
  <thead>
    <tr>
      <th
        class="is-default"
      >
        Date
      </th>
      <th
        class="is-default"
      >
        Time
      </th>
      <th
        class="is-default"
      >
        User
      </th>
      <th
        class="is-default"
      >
        Role
      </th>
      <th
        class="is-default"
      >
        Cause
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th
        class="is-default"
      >
        04/14/2017
      </th>
      <td
        class="is-default"
      >
        19:34 PDT
      </td>
      <td
        class="is-default"
      >
        yby.jupiter
      </td>
      <td
        class="is-default"
      >
        Admin
      </td>
      <td
        class="is-default"
      >
        jira123
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <th
        class="is-default"
      >
        04/14/2017
      </th>
      <td
        class="is-default"
      >
        19:34 PDT
      </td>
      <td
        class="is-default"
      >
        yby.jupiter
      </td>
      <td
        class="is-default"
      >
        Admin
      </td>
      <td
        class="is-default"
      >
        jira123
      </td>
    </tr>
  </tfoot>
</table>
`;
